--- a/rest/pom.xml
+++ b/rest/pom.xml
@@ -97,6 +97,12 @@
             <version>${uvms.commons.version}</version>
         </dependency>
 
+        <dependency>
+            <groupId>javax.xml.bind</groupId>
+            <artifactId>jaxb-api</artifactId>
+        </dependency>
+
+
     </dependencies>
 
     <build>
