--- a/model/pom.xml
+++ b/model/pom.xml
@@ -5,14 +5,14 @@
     <parent>
         <groupId>eu.europa.ec.fisheries.uvms.spatialSwe</groupId>
         <artifactId>spatialSwe</artifactId>
-        <version>2.0.9-UVMS</version>
+        <version>2.0.10-UVMS-SNAPSHOT</version>
 	</parent>
     
     <groupId>eu.europa.ec.fisheries.uvms.spatialSwe</groupId>
     <artifactId>spatial-model</artifactId>
     <name>spatial-model</name>
     <packaging>ejb</packaging>
-    <version>2.0.9-UVMS</version>
+    <version>2.0.10-UVMS-SNAPSHOT</version>
     <description>This module shall have interfaces, XSD, and DTOs</description>
 
     <properties>
