--- a/module/pom.xml
+++ b/module/pom.xml
@@ -51,6 +51,25 @@
                 <artifactId>maven-javadoc-plugin</artifactId>
             </plugin>
         </plugins>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>org.wildfly.plugins</groupId>
+                    <artifactId>wildfly-maven-plugin</artifactId>
+                    <version>2.0.1.Final</version>
+
+                    <configuration>
+                        <filename>${project.build.finalName}.${project.packaging}</filename>
+                        <targetDir>${targetDir}</targetDir>
+                        <hostname>${hostname}</hostname>
+                        <port>${port}</port>
+                        <username>${wildfly-username}</username>
+                        <password>${wildfly-password}</password>
+                        <force>true</force>
+                    </configuration>
+                </plugin>
+            </plugins>
+        </pluginManagement>
     </build>
 
     <dependencies>
@@ -99,45 +118,33 @@
                     <plugin>
                         <groupId>org.wildfly.plugins</groupId>
                         <artifactId>wildfly-maven-plugin</artifactId>
-                        <version>1.1.0.Alpha11</version>
                         <executions>
-                            <!-- Undeploy the application on clean -->
-		                    <execution>
-		                        <id>undeploy</id>
-		                        <phase>clean</phase>
-		                        <goals>
-		                            <goal>undeploy</goal>
-		                        </goals>
-		                        <configuration>
-		                            <ignoreMissingDeployment>true</ignoreMissingDeployment>
-		                        </configuration>
-                    		</execution>
-                    		<execution>
-		                        <id>deploy</id>
-		                        <phase>install</phase>
-		                        <goals>
-		                            <goal>deploy</goal>
-		                        </goals>
-                    		</execution>
+                            <execution>
+                                <phase>install</phase>
+                                <goals>
+                                    <goal>deploy</goal>
+                                </goals>
+                            </execution>
                         </executions>
-                        <configuration>
-                            <filename>${project.build.finalName}.${project.packaging}</filename>
-                            <targetDir>${project.build.directory}</targetDir>
-                            <hostname>${hostname}</hostname>
-                            <port>${port}</port>
-                            <username>${username}</username>
-                            <password>${password}</password>
-                            <force>true</force>
-                        </configuration>
                     </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
+            <id>wildfly-undeploy</id>
+            <build>
+                <plugins>
                     <plugin>
-                        <groupId>org.pitest</groupId>
-                        <artifactId>pitest-maven</artifactId>
-                        <version>1.1.10</version>
-                        <configuration>
-                            <!-- we want to skip for this module -->
-                            <skip>true</skip>
-                        </configuration>
+                        <groupId>org.wildfly.plugins</groupId>
+                        <artifactId>wildfly-maven-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <phase>validate</phase>
+                                <goals>
+                                    <goal>undeploy</goal>
+                                </goals>
+                            </execution>
+                        </executions>
                     </plugin>
                 </plugins>
             </build>
