--- a/pom.xml
+++ b/pom.xml
@@ -138,6 +138,16 @@
 	            <groupId>eu.europa.ec.fisheries.uvms.commons</groupId>
 	            <artifactId>uvms-commons-message</artifactId>
                 <version>${uvms.commons.version}</version>
+                <exclusions>
+	            	<exclusion>
+	            		<groupId>com.sun.xml.bind</groupId>
+	            		<artifactId>jaxb-impl</artifactId>
+	            	</exclusion>
+	            	<exclusion>
+	            		<groupId>com.sun.xml.bind</groupId>
+	            		<artifactId>jaxb-core</artifactId>
+	            	</exclusion>
+	            </exclusions>
 			</dependency>
 
             <dependency>
@@ -187,18 +197,6 @@
                 <groupId>org.geotools</groupId>
                 <artifactId>gt-epsg-hsql</artifactId>
                 <version>${geotools.version}</version>
-            </dependency>
-
-            <dependency>
-                <groupId>com.sun.xml.bind</groupId>
-                <artifactId>jaxb-impl</artifactId>
-                <version>2.3.0</version>
-            </dependency>
-
-            <dependency>
-                <groupId>com.sun.xml.bind</groupId>
-                <artifactId>jaxb-core</artifactId>
-                <version>2.3.0</version>
             </dependency>
 
             <dependency>
