--- a/pom.xml
+++ b/pom.xml
@@ -158,6 +158,10 @@
                         <groupId>org.jboss.arquillian.junit</groupId>
                         <artifactId>arquillian-junit-container</artifactId>
                     </exclusion>
+                    <exclusion>
+                        <groupId>org.wildfly.arquillian</groupId>
+                        <artifactId>wildfly-arquillian-container-remote</artifactId>
+                    </exclusion>
                 </exclusions>
             </dependency>
 
