--- a/LIQUIBASE/pom.xml
+++ b/LIQUIBASE/pom.xml
@@ -8,7 +8,7 @@
     <parent>
         <groupId>eu.europa.ec.fisheries.uvms.spatial</groupId>
         <artifactId>spatial</artifactId>
-        <version>2.0.5-SNAPSHOT</version>
+        <version>2.0.5</version>
     </parent>
 
     <profiles>
