--- a/LIQUIBASE/pom.xml
+++ b/LIQUIBASE/pom.xml
@@ -186,6 +186,7 @@
                 </plugins>
             </build>
             <properties>
+                <db.changeLogFile>changelog/db-changelog-master.xml</db.changeLogFile>
                 <db.docker.url>offline:postgresql?changeLogFile=target/databasechangelog.csv&amp;outputLiquibaseSql=true</db.docker.url>
             </properties>
         </profile>
@@ -198,7 +199,6 @@
                 <plugin>
                     <groupId>org.liquibase</groupId>
                     <artifactId>liquibase-maven-plugin</artifactId>
-                    <version>3.5.2</version>
                     <configuration>
                         <promptOnNonLocalDatabase>false</promptOnNonLocalDatabase>
                         <changeLogFile>${db.changeLogFile}</changeLogFile>
