--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,7 @@ logging.properties
 rest/src/main/webapp/apidocs/*
 *.DS_Store
 .flattened-pom.xml
+.project
+.classpath
+.settings/
+pom.xml.versionsBackup
